atualizei o exc022 > fundo006

--- a/exercicios/exc022/fundo006.html
+++ b/exercicios/exc022/fundo006.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
@@ -13,11 +13,16 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+            /* Shorthand - background
+                color> image> position> repeat> [size]> attachment*/
+
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -33,6 +38,21 @@
     <main>
         <h1>Teste de Imagem de Fundo</h1>
         <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores dolor ipsa qui doloribus placeat? Deserunt, officiis aperiam delectus sunt libero consequatur voluptas dolore in nam consequuntur sequi est minus ipsa.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id necessitatibus tenetur odio enim magnam quas sit cupiditate! Sequi rem, repellat animi voluptate molestiae impedit quae dolores, odio distinctio placeat amet.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, at animi similique inventore architecto corporis! Optio harum incidunt aliquid alias esse facere, aperiam iste eveniet exercitationem, odit unde assumenda a.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores dolor ipsa qui doloribus placeat? Deserunt, officiis aperiam delectus sunt libero consequatur voluptas dolore in nam consequuntur sequi est minus ipsa.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id necessitatibus tenetur odio enim magnam quas sit cupiditate! Sequi rem, repellat animi voluptate molestiae impedit quae dolores, odio distinctio placeat amet.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, at animi similique inventore architecto corporis! Optio harum incidunt aliquid alias esse facere, aperiam iste eveniet exercitationem, odit unde assumenda a.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores dolor ipsa qui doloribus placeat? Deserunt, officiis aperiam delectus sunt libero consequatur voluptas dolore in nam consequuntur sequi est minus ipsa.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id necessitatibus tenetur odio enim magnam quas sit cupiditate! Sequi rem, repellat animi voluptate molestiae impedit quae dolores, odio distinctio placeat amet.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, at animi similique inventore architecto corporis! Optio harum incidunt aliquid alias esse facere, aperiam iste eveniet exercitationem, odit unde assumenda a.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores dolor ipsa qui doloribus placeat? Deserunt, officiis aperiam delectus sunt libero consequatur voluptas dolore in nam consequuntur sequi est minus ipsa.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id necessitatibus tenetur odio enim magnam quas sit cupiditate! Sequi rem, repellat animi voluptate molestiae impedit quae dolores, odio distinctio placeat amet.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, at animi similique inventore architecto corporis! Optio harum incidunt aliquid alias esse facere, aperiam iste eveniet exercitationem, odit unde assumenda a.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores dolor ipsa qui doloribus placeat? Deserunt, officiis aperiam delectus sunt libero consequatur voluptas dolore in nam consequuntur sequi est minus ipsa.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id necessitatibus tenetur odio enim magnam quas sit cupiditate! Sequi rem, repellat animi voluptate molestiae impedit quae dolores, odio distinctio placeat amet.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, at animi similique inventore architecto corporis! Optio harum incidunt aliquid alias esse facere, aperiam iste eveniet exercitationem, odit unde assumenda a.
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores dolor ipsa qui doloribus placeat? Deserunt, officiis aperiam delectus sunt libero consequatur voluptas dolore in nam consequuntur sequi est minus ipsa.
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id necessitatibus tenetur odio enim magnam quas sit cupiditate! Sequi rem, repellat animi voluptate molestiae impedit quae dolores, odio distinctio placeat amet.
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, at animi similique inventore architecto corporis! Optio harum incidunt aliquid alias esse facere, aperiam iste eveniet exercitationem, odit unde assumenda a.
